# singular_cpp

./: CMakeLists.txt  implementation.cpp  install.sh  run.sh  token_read.sh
flint/: CMakeLists.txt  install.sh  run.sh
flint/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  gauss  install_manifest.txt
flint/src/: gauss copy.cpp  gauss_Fq.cpp
simple_singular/: CMakeLists.txt  run.sh
simple_singular/src/: main.cpp
singular_kernel/: .gitignore  .singularhistory  CMakeLists.txt  install.sh  run.sh
singular_kernel/src/: .singularhistory  feynman.cpp  feynman.h  feynman.lib  gauss_red.cpp  main copy 3.cpp  main copy 4.cpp  main copy 5.cpp  main copy 9.cpp  main.cpp  main_function_ring.cpp  main_ring.cpp  printMat.cpp
singular_kernel/temp/: .singularhistory  waas_54531_1738847576875217672  waas_54531_1738847576875366918
src/: kstd_file_read.cpp  main copy 2.cpp  main copy 6.cpp  main copy 7.cpp  main copy 8.cpp  main copy.cpp  main.cpp  main_map.cpp
temp/: waas_54531_1738847576868722010  waas_54531_1738847576874839000  waas_54549_1738847576948268146  waas_54549_1738847576956793187  waas_54549_1738847576961148731  waas_54549_1738847577827785260
